tests/ui/const-generics/generic_const_exprs/coherence-overlap-const-projection-157937.stderr
error[E0119]: conflicting implementations of trait `From<A<[i8; _]>>` for type `A<[i8; _]>`
  --> $DIR/coherence-overlap-const-projection-157937.rs:18:1
   |
LL | impl<T: Trait> From<A<[i8; T::CONST]>> for A<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> From<T> for T;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
